# microsoft-hack-2

./: testrequirements.txt
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/api/routers/: chat.py  nodeurl.py
backend/app/api/routers/controllers/: fetch_topic_content_controller.py  fetch_topics_content.py  fetch_topics_controller.py  interruption_graph.py  stt_tts_controller.py  temp_audio.webm  upload_document_controller.py
backend/app/core/: fetch_topics.py  upload_document.py
backend/app/core/agent/: core.py
backend/app/core/agent/flows/: backup_flow.py  qa_flow.py
backend/app/core/agent/graphs/: interruption_graph.py  script_graph.py
backend/app/core/agent/helpers/: utils.py
backend/app/core/audio/: stt.py  testingScript.py  tts.py
backend/app/core/common/: fetch_topic_content.py  upload_document.py
backend/app/core/db/: mongo_db.py  zillis_db.py
backend/app/core/socket/: streaming_socket.py
backend/app/utils/: index.py  metadata.json
backend/app/utils/llm/: document_qa.py  gemini_llm.py
backend/app/utils/pdf_parser/: pdf_parser.py
backend/app/utils/vector_store/: embeddings.py  vector_store.py
frontend/rag-hack-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/rag-hack-ui/public/: index.html
frontend/rag-hack-ui/src/: App.tsx  axios.ts  home.tsx  index.css  index.tsx  interactive-screen.tsx  output.css  upload.tsx
frontend/rag-hack-ui/src/actions/: index.js  pageActions.js  topicActions.js
frontend/rag-hack-ui/src/asset/: floating-svg.tsx  floatingSVG.tsx
frontend/rag-hack-ui/src/components/ui/: AudioRecorder.tsx  Navigation.tsx  menuItem.tsx  menuToggle.tsx  navigationIcon.tsx  upload.tsx  voiceVisualizer.tsx
frontend/rag-hack-ui/src/hooks/: useAxios.tsx
frontend/rag-hack-ui/src/lib/: actionTypes.tsx
frontend/rag-hack-ui/src/pages/: dashboard.tsx  home.tsx
frontend/rag-hack-ui/src/reducers/: index.tsx  pageReducer.js  topicReducer.js
