[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curio"
version = "v1"
dependencies = [
  "fastapi==0.110.1",
  "watchfiles==0.21.0",
  "uvicorn==0.29.0"
]
requires-python = ">=3.9"
description = "Curio API"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# Add this section to specify which packages to include
[tool.hatch.build.targets.wheel]
packages = ["app"]