[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curio"
version = "v1"
dependencies = [
  "langchain",
  "langchain-community",
  "langgraph",
  "langchain-google-genai",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-voyageai",
  "langchain-groq",
  "langchain-astradb",
  "pymilvus",
  "openai",
  "aiohttp==3.9.4",
  "aiolimiter==1.1.0",
  "aiosignal==1.3.1",
  "annotated-types==0.6.0",
  "anthropic==0.23.1",
  "anyio==4.3.0",
  "attrs==23.2.0",
  "beautifulsoup4==4.12.3",
  "certifi==2024.2.2",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "dataclasses-json==0.6.4",
  "Deprecated==1.2.14",
  "dirtyjson==1.0.8",
  "distro==1.9.0",
  "dnspython==2.6.1",
  "email_validator==2.1.1",
  "fastapi==0.110.1",
  "watchfiles==0.21.0",
  "uvicorn==0.29.0"
]
requires-python = ">=3.9"
description = "Curio API"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# Add this section to specify which packages to include
[tool.hatch.build.targets.wheel]
packages = ["app"]